fix firewall-rules tagging so it can actually work

--- a/roles/vyos-firewall/tasks/load_zone_info.yml
+++ b/roles/vyos-firewall/tasks/load_zone_info.yml
@@ -16,5 +16,7 @@
   with_fileglob: "zones/{{ zone | lower }}/from-*-{{ _afi }}.yml"
   loop_control:
     loop_var: "file_path"
+  tags:
+    - "firewall-rules"
   when:
     - "file_path.split('/')[-1][5:-9].upper() in _named_firewalls"
