--- a/roles/vyos-firewall/tasks/main.yml
+++ b/roles/vyos-firewall/tasks/main.yml
@@ -3,11 +3,15 @@
 - name: "Set default attribute values on vyos_firewall__zones"
   ansible.builtin.set_fact:
     vyos_firewall__zones: "{{ lookup('template', 'templates/vyos_firewall__zones.j2') | from_yaml }}"
+  tags:
+    - "always"
 - name: "Load Firewall Zone Information for IPv4"
   ansible.builtin.include_tasks: "load_zone_info.yml"
   loop: "{{ _named_firewalls }}"
   loop_control:
     loop_var: zone
+  tags:
+    - "firewall-rules"
   vars:
     _afi: "ipv4"
     _named_firewalls: "{{ vyos_firewall__zones | map(attribute='firewall_name') | unique | sort }}"
@@ -16,6 +20,8 @@
   loop: "{{ _named_firewalls }}"
   loop_control:
     loop_var: zone
+  tags:
+    - "firewall-rules"
   vars:
     _afi: "ipv6"
     _named_firewalls: "{{ vyos_firewall__zones | map(attribute='firewall_name') | unique | sort }}"
@@ -32,3 +38,5 @@
 - name: "Set Zone Policy"
   vyos.vyos.vyos_config:
     src: "zone-policy.j2"
+  tags:
+    - "firewall-zones"
