--- a/group_vars/vyos_home.yml
+++ b/group_vars/vyos_home.yml
@@ -179,6 +179,7 @@ vyos_firewall_global__group:
         - address: "10.100.0.{{ vyos__peer_host_id_ipv4 }}"
         - address: "10.117.0.{{ vyos__peer_host_id_ipv4 }}"
         - address: "10.131.0.{{ vyos__peer_host_id_ipv4 }}"
+        - address: "10.150.0.{{ vyos__peer_host_id_ipv4 }}"
         - address: "172.16.5.{{ vyos__peer_host_id_ipv4 }}"
         - address: "192.168.1.{{ vyos__peer_host_id_ipv4 }}"
     - name: "PEER-v6"
