do not run valheim anymore all the time

--- a/roles/valheim/tasks/main.yml
+++ b/roles/valheim/tasks/main.yml
@@ -60,9 +60,10 @@
           volumes:
             - "/opt/valheim:/config"
     pull: yes
+    stopped: yes
   vars:
     ansible_python_interpreter: "/usr/bin/env python3-docker"
   register: status
 - ansible.builtin.assert:
     that:
-      - "status.services.valheim_server.valheim_valheim_server_1.state.running"
+      - "not status.services.valheim_server.valheim_valheim_server_1.state.running"
