--- a/vyos.yml
+++ b/vyos.yml
@@ -266,22 +266,19 @@
           - "set high-availability vrrp group CULTIVAR-v4 virtual-address 10.150.0.1/24"
           - "set high-availability vrrp group CULTIVAR-v4 vrid 150"
           - "set high-availability vrrp sync-group MAIN member CULTIVAR-v4"
-          # WAN-CELLULAR
-          - "set high-availability vrrp group WAN-CELLULAR-v4 description '{{ ansible_managed }}'"
-          - "set high-availability vrrp group WAN-CELLULAR-v4 hello-source-address 172.16.5.{{ vyos__host_id_ipv4 }}"
-          - "set high-availability vrrp group WAN-CELLULAR-v4 interface {{ vyos__wan_cellular_interface }}"
-          - "set high-availability vrrp group WAN-CELLULAR-v4 peer-address 172.16.5.{{ vyos__peer_host_id_ipv4 }}"
-          - "set high-availability vrrp group WAN-CELLULAR-v4 priority {{ vyos__vrrp_priority }}"
-          - "set high-availability vrrp group WAN-CELLULAR-v4 virtual-address 172.16.5.2/24"
-          - "set high-availability vrrp group WAN-CELLULAR-v4 vrid 255"
-          - "set high-availability vrrp sync-group MAIN member WAN-CELLULAR-v4"
         save: yes
       tags:
         - "vrrp"
-
+    - name: "Setup WAN load-balancing"
+      vyos.vyos.vyos_config:
+        lines:
+          - "set protocols static interface-route 0.0.0.0/0 next-hop-interface pppoe0 distance 10"
+      tags:
+        - "vrrp"
+        - "routing"
 
     #
-    # Failover
+    # NAT
     #
     - set_fact:
         lan_interfaces_with_wan_access:
@@ -311,80 +308,12 @@
             ipv4_network: "10.131.0.0/24"
       tags:
         - always
-
-    - name: "Setup WAN load-balancing"
-      vyos.vyos.vyos_config:
-        lines:
-          - "set load-balancing wan interface-health pppoe0 nexthop dhcp"
-          - "set load-balancing wan interface-health pppoe0 failure-count 2"
-          - "set protocols static interface-route 0.0.0.0/0 next-hop-interface pppoe0 distance 10"
-          - "set load-balancing wan interface-health {{ vyos__wan_cellular_interface }} nexthop 172.16.5.1"
-          - "set load-balancing wan interface-health {{ vyos__wan_cellular_interface }} failure-count 5"
-          - "set protocols static route 0.0.0.0/0 next-hop 172.16.5.1 distance 100"
-      tags:
-        - failover
-    - name: "Setup static routes and ping targets for WAN-CenturyLink"
-      vyos.vyos.vyos_config:
-        lines:
-          - "set protocols static interface-route {{ item }}/32 next-hop-interface pppoe0"
-          - "set load-balancing wan interface-health pppoe0 test {{ rule_number }} type ping"
-          - "set load-balancing wan interface-health pppoe0 test {{ rule_number }} target {{ item }}"
-      loop: "{{ vyos__wan_centurylink_dns }}"
-      loop_control:
-        index_var: rule_number
-      tags:
-        - failover
-    - name: "Setup static routes and ping targets for WAN-Cellular"
-      vyos.vyos.vyos_config:
-        lines:
-          - "set protocols static route {{ item }}/32 next-hop 172.16.5.1"
-          - "set protocols static route {{ item }}/32 next-hop 172.16.5.1 distance 2"
-          - "set load-balancing wan interface-health {{ vyos__wan_cellular_interface }} test {{ rule_number }} type ping"
-          - "set load-balancing wan interface-health {{ vyos__wan_cellular_interface }} test {{ rule_number }} target {{ item }}"
-      loop: "{{ vyos__wan_cellular_dns }}"
-      loop_control:
-        index_var: rule_number
-      tags:
-        - failover
-    - name: "Setup rules for each inbound interface"
-      vyos.vyos.vyos_config:
-        lines:
-          # Exclude Private IPv4 Space
-          - "set load-balancing wan rule {{ ((rule_number + 1) * 10) + 3 }} destination address 10.0.0.0/8"
-          - "set load-balancing wan rule {{ ((rule_number + 1) * 10) + 3 }} exclude"
-          - "set load-balancing wan rule {{ ((rule_number + 1) * 10) + 3 }} inbound-interface {{ item.interface }}"
-          - "set load-balancing wan rule {{ ((rule_number + 1) * 10) + 4 }} destination address 172.16.0.0/12"
-          - "set load-balancing wan rule {{ ((rule_number + 1) * 10) + 4 }} exclude"
-          - "set load-balancing wan rule {{ ((rule_number + 1) * 10) + 4 }} inbound-interface {{ item.interface }}"
-          - "set load-balancing wan rule {{ ((rule_number + 1) * 10) + 5 }} destination address 192.168.0.0/16"
-          - "set load-balancing wan rule {{ ((rule_number + 1) * 10) + 5 }} exclude"
-          - "set load-balancing wan rule {{ ((rule_number + 1) * 10) + 5 }} inbound-interface {{ item.interface }}"
-          # Setup Failover
-          - "set load-balancing wan rule {{ ((rule_number + 1) * 10) + 9 }} failover"
-          - "set load-balancing wan rule {{ ((rule_number + 1) * 10) + 9 }} inbound-interface {{ item.interface }}"
-          - "set load-balancing wan rule {{ ((rule_number + 1) * 10) + 9 }} interface pppoe0 weight 10"
-          - "set load-balancing wan rule {{ ((rule_number + 1) * 10) + 9 }} interface {{ vyos__wan_cellular_interface }} weight 1"
-        save: yes
-      loop: "{{ lan_interfaces_with_wan_access }}"
-      loop_control:
-        index_var: rule_number
-        label: "{{ item.interface }}"
-      tags:
-        - rules
-        - failover
-
-    #
-    # NAT
-    #
     - name: "Setup NAT masquerade rules"
       vyos.vyos.vyos_config:
         lines:
           - "set nat source rule {{ (rule_number + 1) * 10 }} outbound-interface pppoe0"
           - "set nat source rule {{ (rule_number + 1) * 10 }} source address {{ item.ipv4_network }}"
           - "set nat source rule {{ (rule_number + 1) * 10 }} translation address masquerade"
-          - "set nat source rule {{ ((rule_number + 1) * 10) + 1 }} outbound-interface {{ vyos__wan_cellular_interface }}"
-          - "set nat source rule {{ ((rule_number + 1) * 10) + 1 }} source address {{ item.ipv4_network }}"
-          - "set nat source rule {{ ((rule_number + 1) * 10) + 1 }} translation address masquerade"
       loop: "{{ lan_interfaces_with_wan_access }}"
       loop_control:
         index_var: rule_number
@@ -398,11 +327,6 @@
           - "set nat destination rule {{ (rule_number + 1) * 10 }} inbound-interface pppoe0"
           - "set nat destination rule {{ (rule_number + 1) * 10 }} protocol '{{ item.protocol }}'"
           - "set nat destination rule {{ (rule_number + 1) * 10 }} translation address '{{ item.translation_address }}'"
-          - "set nat destination rule {{ ((rule_number + 1) * 10) + 1 }} description '{{ item.description }} ({{ ansible_managed }})'"
-          - "set nat destination rule {{ ((rule_number + 1) * 10) + 1 }} destination port '{{ item.port }}'"
-          - "set nat destination rule {{ ((rule_number + 1) * 10) + 1 }} inbound-interface {{ vyos__wan_cellular_interface }}"
-          - "set nat destination rule {{ ((rule_number + 1) * 10) + 1 }} protocol '{{ item.protocol }}'"
-          - "set nat destination rule {{ ((rule_number + 1) * 10) + 1 }} translation address '{{ item.translation_address }}'"
       loop:
         - description: "factorio-server"
           port: "34197"
