--- a/host_vars/docker-ssd.hogs.tswn.us.yml
+++ b/host_vars/docker-ssd.hogs.tswn.us.yml
@@ -64,12 +64,12 @@ factorio__game_password: !vault |
 #   enabled: False
 factorio__mods:
   - name: "ArmouredBiters"
-  - name: "Auto Deconstruct"
+  - name: "AutoDeconstruct"
   - name: "combat-mechanics-overhaul"
   - name: "BlackMarket2"
   - name: "even-distribution"
   - name: "flib"
-  - name: "Pitch Black"
+  - name: "Pitch_Black"
   - name: "InlaidLampsExtended"
   - name: "LargeLamp"
   - name: "liborio"
@@ -78,25 +78,33 @@ factorio__mods:
   - name: "RPGsystem"
   - name: "scattergun_turret"
   - name: "Squeak Through"
-  - name: "Player Auto Build"
-  - name: "Rebalanced solar energy and laser turrets"
-  - name: "Repair Turret"
-  - name: "Solarthermal Energy"
-  - name: "Shield Projector"
-  - name: "Long Range Turret"
-  - name: "Inventory Repair"
-  - name: "Advanced Solar and Accumulator"
-  - name: "Krastorio 2"
-  - name: "Mega Bot Start"
-  - name: "The Ruins Mod"
+  - name: "Player-Auto-Build"
+  - name: "Repair_Turret"
+  - name: "adv_heat"
+  - name: "LR_Turret"
+  - name: "inventory-repair"
+  - name: "Advanced-Solar-and-Accumulator"
+  - name: "Krastorio2"
+  - name: "MegaBotStart"
   - name: "Enemy Race Manager"
   - name: "ERM - Zerg Units"
   - name: "ERM - Protoss Units"
-  
+  - name: "AbandonedRuins"
+  - name: "AbandonedRuins-Krastorio2"
+  - name: "akimbo-weapons"
+  - name: "walls-block-spitters"
+  - name: "SolarPanelRebalance"
+  - name: "shield-projector"
+  - name: "Pitch_Black"
+  - name: "InlaidLampsExtended"
+  - name: "even-distribution"
+  - name: "erm_zerg"
+  - name: "erm_toss"
+  - name: "enemyracemanager"
+  - name: "combat-mechanics-overhaul"
+  - name: "stdlib"
 
-  
-  
-  
+
 
 valheim__server_name: "valheim.tswn.us"
 valheim__world_name: "Forerunner"
