Factorio mods for server (#2)

--- a/host_vars/docker-ssd.hogs.tswn.us.yml
+++ b/host_vars/docker-ssd.hogs.tswn.us.yml
@@ -63,20 +63,45 @@ factorio__game_password: !vault |
 # - name: "Squeak Through"
 #   enabled: False
 factorio__mods:
+  - name: "AbandonedRuins"
+  - name: "AbandonedRuins-Krastorio2"
+  - name: "Advanced-Solar-and-Accumulator"
   - name: "ArmouredBiters"
-  - name: "combat-mechanics-overhaul"
+  - name: "AutoDeconstruct"
   - name: "BlackMarket2"
+  - name: "InlaidLampsExtended"
+  - name: "InlaidLampsExtended"
+  - name: "Krastorio2"
+  - name: "LR_Turret"
+  - name: "LargeLamp"
+  - name: "MegaBotStart"
+  - name: "MegaBotStart"
+  - name: "Pitch_Black"
+  - name: "Pitch_Black"
+  - name: "Player-Auto-Build"
+  - name: "RPGsystem"
+  - name: "Repair_Turret"
+  - name: "SolarPanelRebalance"
+  - name: "Squeak Through"
+  - name: "adv_heat"
+  - name: "akimbo-weapons"
+  - name: "combat-mechanics-overhaul"
+  - name: "combat-mechanics-overhaul"
+  - name: "enemyracemanager"
+  - name: "erm_toss"
+  - name: "erm_zerg"
+  - name: "even-distribution"
   - name: "even-distribution"
   - name: "flib"
-  - name: "heroturrets"
-  - name: "InlaidLampsExtended"
-  - name: "LargeLamp"
+  - name: "inventory-repair"
   - name: "liborio"
-  - name: "MegaBotStart"
   - name: "miniloader"
-  - name: "RPGsystem"
   - name: "scattergun_turret"
-  - name: "Squeak Through"
+  - name: "shield-projector"
+  - name: "stdlib"
+  - name: "walls-block-spitters"
+
+
 
 valheim__server_name: "valheim.tswn.us"
 valheim__world_name: "Forerunner"
