--- a/roles/vyos-firewall/zones/home/from-wan-ipv4.yml
+++ b/roles/vyos-firewall/zones/home/from-wan-ipv4.yml
@@ -1,1 +1,9 @@
 ---
+- description: "Allow Factorio Connections"
+  action: "accept"
+  protocol: "udp"
+  state:
+    new: true
+  destination:
+    address: "10.117.0.30"
+    port: "34197"
