--- a/roles/vyos-interfaces/tasks/main.yml
+++ b/roles/vyos-interfaces/tasks/main.yml
@@ -14,4 +14,4 @@
   vyos.vyos.vyos_config:
     src: "pppoe_config.j2"
     save: yes
-  when: "vyos_interfaces__pppoe | length > 0"
+  when: "vyos_interfaces__pppoe | default([]) | length > 0"
