--- a/roles/vyos-firewall/tasks/load_zone_info.yml
+++ b/roles/vyos-firewall/tasks/load_zone_info.yml
@@ -1,11 +1,11 @@
 ---
 # tasks file for vyos-firewall to load zone information.
-- name: "Build rule_sets_{{ _afi }} for {{ zone }}"
+- name: "Build rule_sets_{{ _afi }} for {{ zone.name }}"
   ansible.builtin.set_fact: >-
     rule_sets_{{ _afi }}={{
       lookup("vars", "rule_sets_" + _afi, default=[]) + [
         dict(
-          name=(zone | upper + "-from-" + file_path.split("/")[-1][5:-9] | upper + "-v" + _afi[-1]),
+          name=(zone.firewall_name | upper + "-from-" + file_path.split("/")[-1][5:-9] | upper + "-v" + _afi[-1]),
           description=ansible_managed,
           enable_default_log=True,
           default_action="drop",
@@ -13,10 +13,11 @@
         )
       ]
     }}
-  with_fileglob: "{{ vyos_firewall__zones_path }}/{{ zone | lower }}/from-*-{{ _afi }}.yml"
+  with_fileglob: "{{ vyos_firewall__zones_path }}/{{ zone.firewall_name | lower }}/from-*-{{ _afi }}.yml"
   loop_control:
     loop_var: "file_path"
   tags:
     - "firewall-rules"
   when:
-    - "file_path.split('/')[-1][5:-9].upper() in _named_firewalls"
+    # Only run when we expect a zone to be paired with the zone we are building the ruleset for.
+    - "file_path.split('/')[-1][5:-9].upper() in zone.from | map(attribute='firewall_name')"
