add wireguard tunnel

--- a/firewall_zones/vyos_remote/local/from-wan-ipv4.yml
+++ b/firewall_zones/vyos_remote/local/from-wan-ipv4.yml
@@ -11,3 +11,8 @@
   protocol: "tcp"
   state:
     new: true
+- description: "Allow Wireguard"
+  action: "accept"
+  destination:
+    port: "51820-51821"
+  protocol: "udp"
