--- a/host_vars/maccabeus01.hogs.tswn.us.yml
+++ b/host_vars/maccabeus01.hogs.tswn.us.yml
@@ -7,3 +7,22 @@ vyos__vrrp_priority: 25
 vyos__wan_centurylink_interface: "eth0"
 vyos__wan_cellular_interface: "eth2"
 vyos__lan_interface: "eth1"
+
+vyos_interfaces__wireguard:
+  - name: "wg0"
+    ipv4:
+      - address: "10.10.1.{{ vyos__host_id_ipv4 }}/24"
+    mtu: 1280
+    peers:
+      - name: "tartarus01"
+        allowed_ips:
+          ipv4:
+            - network: "10.10.1.2/32"
+        ipv4:
+          - address: "149.248.37.12"
+        persistent_keepalive_sec: 25
+        port: 51820
+        pubkey: "{{ hostvars['tartarus01.tswn.us'].wireguard__pubkey }}"
+
+
+wireguard__pubkey: "JRciOELKgO1eef47kj82UPqkdHRLGXQRb+PRaL1aNGw="
