only use one tunnel for both maccabeus routers

--- a/firewall_zones/vyos_remote/local/from-wan-ipv4.yml
+++ b/firewall_zones/vyos_remote/local/from-wan-ipv4.yml
@@ -14,5 +14,5 @@
 - description: "Allow Wireguard"
   action: "accept"
   destination:
-    port: "51820-51821"
+    port: "51820"
   protocol: "udp"
