--- a/host_vars/docker-ssd.hogs.tswn.us.yml
+++ b/host_vars/docker-ssd.hogs.tswn.us.yml
@@ -86,11 +86,8 @@ factorio__mods:
   - name: "adv_heat"
   - name: "akimbo-weapons"
   - name: "combat-mechanics-overhaul"
-  - name: "combat-mechanics-overhaul"
-  - name: "enemyracemanager"
-  - name: "erm_toss"
-  - name: "erm_zerg"
-  - name: "even-distribution"
+  - name: "SolarPanelRebalance"
+  - name: "Nova-Natural_Evolution_Enemies"
   - name: "even-distribution"
   - name: "flib"
   - name: "inventory-repair"
