--- a/host_vars/docker-ssd.hogs.tswn.us.yml
+++ b/host_vars/docker-ssd.hogs.tswn.us.yml
@@ -76,21 +76,18 @@ factorio__mods:
   - name: "LargeLamp"
   - name: "MegaBotStart"
   - name: "MegaBotStart"
+  - name: "Nova-Natural_Evolution_Enemies"
   - name: "Pitch_Black"
   - name: "Pitch_Black"
   - name: "Player-Auto-Build"
   - name: "RPGsystem"
   - name: "Repair_Turret"
   - name: "SolarPanelRebalance"
+  - name: "SolarPanelRebalance"
   - name: "Squeak Through"
   - name: "adv_heat"
   - name: "akimbo-weapons"
   - name: "combat-mechanics-overhaul"
-  - name: "combat-mechanics-overhaul"
-  - name: "enemyracemanager"
-  - name: "erm_toss"
-  - name: "erm_zerg"
-  - name: "even-distribution"
   - name: "even-distribution"
   - name: "flib"
   - name: "inventory-repair"
