--- a/host_vars/docker-ssd.hogs.tswn.us.yml
+++ b/host_vars/docker-ssd.hogs.tswn.us.yml
@@ -72,6 +72,7 @@ factorio__mods:
   - name: "InlaidLampsExtended"
   - name: "InlaidLampsExtended"
   - name: "Krastorio2"
+  - name: "Krastorio2Assets"
   - name: "LR_Turret"
   - name: "LargeLamp"
   - name: "MegaBotStart"
@@ -79,7 +80,7 @@ factorio__mods:
   - name: "Nova-Natural_Evolution_Enemies"
   - name: "Pitch_Black"
   - name: "Pitch_Black"
-  - name: "Player-Auto-Build"
+  - name: "player-auto-build"
   - name: "RPGsystem"
   - name: "Repair_Turret"
   - name: "SolarPanelRebalance"
