allow running just factorio server commands

--- a/plays/hosts/docker-ssd.hogs.tswn.us.yml
+++ b/plays/hosts/docker-ssd.hogs.tswn.us.yml
@@ -5,7 +5,9 @@
     - role: nickjj.docker
       tags: ["docker"]
     - role: ara-docker
-    - role: factorio
+    - role: "factorio"
+      tags:
+        - "factorio"
     - role: valheim
       tags:
         - "valheim"
