Add wireguard tunnel for mobile devices to connect to
Uses OSPF based on https://docs.vyos.io/en/latest/configexamples/ha.html#ospf-over-wireguard

--- a/firewall_zones/vyos_remote/local/from-wan-ipv4.yml
+++ b/firewall_zones/vyos_remote/local/from-wan-ipv4.yml
@@ -14,5 +14,5 @@
 - description: "Allow Wireguard"
   action: "accept"
   destination:
-    port: "51820"
+    port: "51820-51822"
   protocol: "udp"
