--- a/group_vars/vyos_home.yml
+++ b/group_vars/vyos_home.yml
@@ -309,21 +309,20 @@ vyos_interfaces__pppoe:
     mtu: 1492
     source_interface: "{{ vyos__wan_centurylink_interface }}.201"
 
-vyos_interfaces__wireguard:
+vyos_ospf_interfaces__config:
   - name: "wg0"
-    ipv4:
-      - address: "10.10.1.{{ vyos__host_id_ipv4 }}/24"
-    mtu: 1280
-    peers:
-      - name: "tartarus01"
-        allowed_ips:
-          ipv4:
-            - network: "10.10.1.2/32"
-        ipv4:
-          - address: "149.248.37.12"
-        persistent_keepalive_sec: 25
-        port: 51820
-        pubkey: "{{ hostvars['tartarus01.tswn.us'].wireguard__pubkey }}"
+    address_family:
+    - afi: "ipv4"
+      authentication:
+        md5_key:
+          key_id: 1
+          key: "{{ vyos__ospf_authentication_key }}"
+      cost: 10 # 1G
+      dead_interval: 5
+      hello_interval: 2
+      network: "point-to-point"
+
+vyos_ospfv2_parameters__router_id: "10.9.0.{{ vyos__host_id_ipv4 }}"
 
 # This uses a local DNS forwarding server, so use that.
 vyos_system__name_servers:
