--- a/host_vars/maccabeus02.hogs.tswn.us.yml
+++ b/host_vars/maccabeus02.hogs.tswn.us.yml
@@ -8,4 +8,27 @@ vyos__wan_centurylink_interface: "eth0"
 vyos__wan_cellular_interface: "eth2"
 vyos__lan_interface: "eth1"
 
+vyos_interfaces__wireguard:
+  - name: "wg0"
+    description: "tartarus01 site-to-site"
+    ipv4:
+      - address: "10.10.1.5/30"
+    mtu: 1280
+    peers:
+      - name: "tartarus01"
+        allowed_ips:
+          ipv4:
+            - network: "10.10.1.6/32"
+            - network: "10.117.2.0/24"
+            - network: "224.0.0.5/32"
+            - network: "224.0.0.6/32"
+        ipv4:
+          - address: "149.248.37.12"
+        persistent_keepalive_sec: 15
+        port: 51821
+        pubkey: "{{ hostvars['tartarus01.tswn.us'].wireguard__pubkey }}"
+
+vyos_ospfv2__neighbors:
+  - neighbor_id: "10.10.1.6"
+
 wireguard__pubkey: "cP6RzKmrP3UjyI/Gue5KN1oYbD6kGkVEHT7xBWshZBE="
