--- a/host_vars/tartarus01.tswn.us.yml
+++ b/host_vars/tartarus01.tswn.us.yml
@@ -19,9 +19,9 @@ vyos_interfaces__ethernet:
 
 vyos_interfaces__wireguard:
   - name: "wg0"
-    description: "maccabeus site-to-site"
+    description: "maccabeus01 site-to-site"
     ipv4:
-      - address: "10.10.1.2/24"
+      - address: "10.10.1.2/30"
     mtu: 1280
     peers:
       - name: "maccabeus01"
@@ -29,18 +29,70 @@ vyos_interfaces__wireguard:
           ipv4:
             - network: "0.0.0.0/0"
             - network: "10.117.0.0/23"
-            - network: "10.10.1.{{ hostvars['maccabeus01.hogs.tswn.us'].vyos__host_id_ipv4 }}/32"
-        persistent_keepalive_sec: 25
+            - network: "10.10.1.1/32"
+        persistent_keepalive_sec: 15
         pubkey: "{{ hostvars['maccabeus01.hogs.tswn.us'].wireguard__pubkey }}"
+    port: 51820
+  - name: "wg1"
+    description: "maccabeus02 site-to-site"
+    ipv4:
+      - address: "10.10.1.6/30"
+    mtu: 1280
+    peers:
       - name: "maccabeus02"
         allowed_ips:
           ipv4:
             - network: "0.0.0.0/0"
             - network: "10.117.0.0/23"
-            - network: "10.10.1.{{ hostvars['maccabeus02.hogs.tswn.us'].vyos__host_id_ipv4 }}/32"
-        persistent_keepalive_sec: 25
+            - network: "10.10.1.5/32"
+        persistent_keepalive_sec: 15
         pubkey: "{{ hostvars['maccabeus02.hogs.tswn.us'].wireguard__pubkey }}"
-    port: 51820
+    port: 51821
+  - name: "wg2"
+    description: "mobile devices vpn"
+    ipv4:
+      - address: "10.117.2.1/24"
+    peers:
+      - name: "sdwilsh-phone"
+        allowed_ips:
+          ipv4:
+            - network: "10.117.2.10/32"
+        pubkey: "tPhu26d+Maw1P/ksdNA995PsTmqnpmjzwiTHe2t36ms="
+    port: 51822
+
+vyos_ospf_interfaces__config:
+  - name: "wg0"
+    address_family:
+    - afi: "ipv4"
+      authentication:
+        md5_key:
+          key_id: 1
+          key: "{{ vyos__ospf_authentication_key }}"
+      cost: 10 # 1G
+      dead_interval: 5
+      hello_interval: 2
+      network: "point-to-point"
+      priority: "{{ hostvars['maccabeus01.hogs.tswn.us'].vyos__vrrp_priority }}"
+  - name: "wg1"
+    address_family:
+    - afi: "ipv4"
+      authentication:
+        md5_key:
+          key_id: 1
+          key: "{{ vyos__ospf_authentication_key }}"
+      cost: 10 # 1G
+      dead_interval: 5
+      hello_interval: 2
+      network: "point-to-point"
+      priority: "{{ hostvars['maccabeus02.hogs.tswn.us'].vyos__vrrp_priority }}"
+
+vyos_ospfv2__neighbors:
+  - neighbor_id: "10.10.1.1"
+    priority: "{{ hostvars['maccabeus01.hogs.tswn.us'].vyos__vrrp_priority }}"
+  - neighbor_id: "10.10.1.5"
+    priority: "{{ hostvars['maccabeus02.hogs.tswn.us'].vyos__vrrp_priority }}"
+
+vyos_ospfv2_parameters__router_id: "149.248.37.12"
 
 # https://www.vultr.com/docs/vultr-dns-servers
 vyos_system__name_servers:
