--- a/host_vars/tartarus01.tswn.us.yml
+++ b/host_vars/tartarus01.tswn.us.yml
@@ -1,4 +1,22 @@
 ---
+vyos_firewall__zones:
+  - name: "LOCAL"
+    local-zone: yes
+  - name: "MACCABEUS"
+    interface: "wg0"
+  - name: "MOBILE"
+    interface: "wg2"
+  - name: "WAN"
+    interface: "eth0"
+vyos_firewall__zones_path: "./firewall_zones/vyos_remote"
+
+vyos_interfaces__ethernet:
+  - name: "eth0"
+    description: "WAN"
+    enabled: true
+    ipv4:
+      - address: "149.248.37.12/23"
+
 vyos_interfaces__wireguard:
   - name: "wg0"
     description: "maccabeus site-to-site"
@@ -24,5 +42,9 @@ vyos_interfaces__wireguard:
         pubkey: "{{ hostvars['maccabeus02.hogs.tswn.us'].wireguard__pubkey }}"
     port: 51820
 
+# https://www.vultr.com/docs/vultr-dns-servers
+vyos_system__name_servers:
+  - "108.61.10.10"
+  - "2001:19f0:300:1704::6"
 
 wireguard__pubkey: "Dwdz7rWR4y8uMW3s4MWZwe1+rR0Bqiigms7Aku51ghU="
